bonus/funny-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-funny
  namespace: dev
spec:
  selector:
    app: iot-funny
  ports:
  - port: 80
    targetPort: 80
